# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "grokcore.traverser"
version = "5.1.dev0"
description = "Traverser for the Grok Framework"
license = "ZPL-2.1"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Grok Team",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "grokcore.component >= 2.5",
    "grokcore.security",
    "grokcore.view",
    "martian",
    "zope.component",
    "zope.interface",
    "zope.publisher",
]

[project.optional-dependencies]
test = [
    "grokcore.content",
    "grokcore.view [test]",
    "zope.app.appsetup",
    "zope.app.wsgi",
    "zope.login",
    "zope.principalregistry",
    "zope.securitypolicy",
    "zope.testbrowser",
    "zope.testing",
]

[project.urls]
Source = "https://github.com/zopefoundation/grokcore.traverser"
Issues = "https://github.com/zopefoundation/grokcore.traverser/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/grokcore.traverser/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["grokcore.traverser"]

[tool.coverage.report]
fail_under = 84
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

